--- a/app/globals.css
+++ b/app/globals.css
@@ -106,7 +106,7 @@ body,
   height: 400px;
   border-radius: 9999px;
   position: relative;
-  animation: one 20s infinite;
+  animation: one 20s ease-in-out infinite;
 }
 
 ._shape-two {
@@ -114,7 +114,7 @@ body,
   height: 300px;
   border-radius: 9999px;
   position: relative;
-  animation: two 20s infinite;
+  animation: two 20s ease-in-out infinite;
 }
 
 @keyframes one {
